# Peerx-Contracts

./: .gitignore  AUDIT_CHECKLIST.md  BATCH_OPTIMIZATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  FORMAL_VERIFICATION.md  FORMAL_VERIFICATION_GUIDE.md  FUNDING.json  IMPLEMENTATION_ISSUE_74.md  PERFORMANCE_BENCHMARKING.md  PR_DESCRIPTION.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  SECURITY.md  SECURITY_FIX_SENSITIVE_RATE_LIMITER.md  TRADING_TEST_ENHANCEMENT.md  UNSAFE_BLOCKS.md  dynamics.MD  roles.MD  soroban.toml
.github/ISSUE_TEMPLATE/: config.yml  security_vulnerability.md
.github/workflows/: README.md  ci.yml  formal_verification.yml  format.yml
benches/: Cargo.toml  contract_benchmark.rs  main.rs
docs/: SLA.md
docs/forensics/: importer.js  snapshot_state.md
docs/refactors/: 2026-gas-rs-organs.md
market-data-streaming/: Cargo.toml
market-data-streaming/src/: analytics.rs  matching_engine.rs  order_book_depth.rs  order_types.rs
peerx-cli/: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md  peerx-cli.json.example
peerx-cli/examples/: basic_health_check.sh  ci_integration.sh  monitoring_cron.sh
peerx-cli/src/: config.rs  error.rs  health.rs  lib.rs  main.rs  output.rs
peerx-cli/src/commands/: health.rs
peerx-cli/src/health/: checks.rs  mod.rs  types.rs
peerx-cli/tests/: health_tests.rs
peerx-contracts/counter/: Cargo.toml  KYC_STATE_MACHINE.md  batch.rs  syntax_check.rs  trading_tests.rs
peerx-contracts/counter/src/: achievements_tests.rs  analytics_dashboard_tests.rs  batch_event_tests.rs  batch_opt_simple_test.rs  batch_performance_tests.rs  batch_tests.rs  dynamic_fee_adjustment.rs  emergency.rs  emergency_override.rs  errors.rs  events.rs  fee_progression_tests.rs  fuzz_tests.rs  governance_params.rs  governance_system.rs  governance_tests.rs  governance_types.rs  invariants.rs  kyc.rs  kyc_tests.rs  lib.rs  liquidity_pool.rs  lp_tests.rs  migration.rs  migration_tests.rs  network_congestion.rs  nft_errors.rs  nft_lending.rs  nft_lending_tests.rs  nft_types.rs  observability.rs  observability_tests.rs  oracle.rs  oracle_adapter.rs  oracle_adapter_tests.rs  oracle_feeds.rs  portfolio.rs  rate_limit.rs  referral_integration_test.rs  referral_system.rs  (+12 more)
peerx-contracts/counter/src/audit_tools/: audit_log.rs  audit_log_test_.rs  main.rs
peerx-contracts/counter/src/governance/: Cargo.toml  admin.rs
peerx-contracts/counter/src/governance_simulation/: analysis.rs
peerx-contracts/counter/src/risk_management/: circuit_breaker.rs  concentration_risk.rs  mod.rs  position.rs  position_limits.rs
peerx-contracts/counter/tests/: formal_verification_tests.rs
peerx-contracts/soroban-ping/: Cargo.toml
peerx-contracts/tests/: comprehensive_trading_test_runner.rs  integration_test.rs  trading_test.rs  validation_test.rs
schemas/: snapshot_state.schema.json
scripts/: check_kyc_guards.sh  regression_detection.py  verify_formal.sh
swaptrade-contracts/: Cargo.toml
swaptrade-contracts/counter/: Cargo.toml  RATE_LIMIT_OPTIMIZATION.md  batch.rs  lib.rs  portfolio.rs  referral.rs  referral_tests.rs  tiers.rs  trading.rs  trading_tests.rs
swaptrade-contracts/counter/src/: achievements_tests.rs  admin.rs  alert_tests.rs  alerts.rs  analytics.rs  analytics_tests.rs  balance_test.rs  batch_event_tests.rs  batch_opt_simple_test.rs  batch_performance_tests.rs  batch_tests.rs  bridge.rs  dashboard_tests.rs  dynamic_fee_adjustment_tests.rs  emergency.rs  enhanced_trading_tests.rs  errors.rs  events.rs  fee_adjustment_manager.rs  fee_history.rs  fee_progression.rs  fuzz_tests.rs  governance_params.rs  governance_system.rs  governance_types.rs  invariants.rs  kyc.rs  kyc_tests.rs  lib.rs  liquidity_pool.rs  lp_tests.rs  migration.rs  migration_tests.rs  multihop_swap_tests.rs  nft_errors.rs  nonce.rs  oracle.rs  oracle_tests.rs  orders.rs  orders_tests.rs  (+12 more)
swaptrade-contracts/counter/src/audit_tools/: Cargo.toml
swaptrade-contracts/counter/src/governance/: Cargo.toml  governance.rs
swaptrade-contracts/counter/src/governance_simulation/: engine.rs  historical.rs  mod.rs  scenarios.rs  voting.rs
swaptrade-contracts/counter/src/risk_management/: portfolio.rs  risk_metrics.rs
swaptrade-contracts/counter/tests/: formal_verification_tests.rs  trading_comprehensive_test.rs
swaptrade-contracts/src/: lib.rs  test.rs
swaptrade-contracts/tests/: error_tests.rs  (+7 more)
tests/: formal_verification_tests.rs  snapshot_state_schema.test.js
(+7 files in other folders)
