[workspace]
resolver = "2"
members = [
  "peerx-contracts/counter",
  "peerx-contracts/soroban-ping",
]

[workspace.dependencies]
soroban-sdk = "21.7.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"
rpath = false
incremental = false

[profile.release-with-logs]
inherits = "release"
debug-assertions = true




[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", tag = "v2.1.1" }
