[package]
name = "swaptrade-benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark-runner"
path = "main.rs"

[dev-dependencies]
swaptrade-contracts = { path = "../swaptrade-contracts/counter" }
soroban-sdk = "22.0.0"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"