[package]
name = "counter"
version = "0.0.0"
edition = "2021"
publish = false
autotests = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[[test]]
name = "formal_verification_tests"
path = "tests/formal_verification_tests.rs"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4"

[features]
# Enable structured logging via Soroban events during tests and debug builds.
# Off by default to avoid overhead in production.
logging = []
experimental = []

# Selects the compiled default for observability::LogLevel (overridable at
# runtime by the admin via set_log_level). Mutually exclusive; omitting both
# yields the dev default (Debug). See src/observability.rs.
mainnet = []
testnet = []
