[package]
name = "counter"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
# Enable structured logging via Soroban events during tests and debug builds.
# Off by default to avoid overhead in production.
logging = []
